<resources>
    <string name="app_name">𝘍𝘓𝘖𝘟𝘛</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_login">login</string>
    <string name="btn_register">register</string>
    <string name="search">Search...</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_you_password">Forgot you password?</string>
    <string name="username">Username</string>
    <string name="type_a_message">Type a message...</string>
    <string name="btn_reset">Reset password</string>
    <string name="btn_logout">Logout</string>
    <string name="reset_password">Enter Your Email</string>
</resources>
