<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fpt.edu.chatapp.LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="70dp"
            android:background="@drawable/rounded_edt"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="8sp" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edt"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="8sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_btn"
            android:text="@string/btn_login"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/forgot_you_password"
            android:textStyle="bold" />


    </LinearLayout>


</RelativeLayout>