<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="fpt.edu.chatapp.Fragments.ProfileFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:src="@drawable/avatar" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:text="@string/username"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_forgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:layout_margin="10sp"
                android:text="@string/btn_reset"
                android:textColor="#000000"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_forgotPass"
                android:layout_margin="10sp"
                android:text="@string/btn_logout"
                android:textColor="#000000"
                android:textSize="17sp" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>